Subida para PreEntrega2

--- a/index.html
+++ b/index.html
@@ -4,10 +4,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Catalogo de Guitarras</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <header>
+        <a href=>
+            <img class="iconos" src="" alt="">
+        </a>
+        <div class="menu">
+            <nav>
+                <ul class="navbar">
+                    <li><a href=>Cuenta</a></li> 
+                    <h2 class="titulo2">TITULO</h2>
+                    <form action="">
+                        <input type="text" placeholder="Buscar...">
+                    </form>
+                    <li><a href="">Inicio</a></li>
+                    <li><a href="">Guitarras</a></li>
+                    <li><a href="">Contactanos</a></li>
+                </ul>
+            </nav>
+    </div>
+    </header>
+    <h1 class="titulo">Bienvenido al catalogo</h1>
+    </div>
+
+        <section class="seccion">
+            <div class="guitarra">
+                <a href=""><img src="" alt=""></a>
+                <p> Guitarra Epiphone</p><p>Precio X</p>
+            </div>
+            <div class="guitarra">
+                <a href=""><img src="" alt=""></a>
+                <p> Guitarra Epiphone</p><p>Precio X</p>
+            </div>
+            <div class="guitarra">
+                <a href=""><img src="" alt=""></a>
+                <p> Guitarra SG Epiphone</p><p>Precio X</p>
+            </div>
+            <div class="guitarra">
+                <a href=""><img src="" alt=""></a>
+                <p> Guitarra Fender</p><p>Precio X</p>
+            </div>
+            <div class="guitarra">
+                <a href=""><img src="" alt=""></a>
+                <p> Guitarra Epiphone</p><p>Precio X</p>
+            </div>
+            <div class="guitarra">
+                <a href=""><img src="" alt=""></a>
+                <p> Guitarra SX</p><p>Precio X</p>
+            </div>
+            <div class="guitarra">
+                <a href=""><img src="" alt=""></a>
+                <p> Guitarra Cort</p><p>Precio X</p>
+            </div>
+            <div class="guitarra">
+                <a href=""><img src="" alt=""></a>
+                <p> Guitarra Ibañez</p><p>Precio X</p>
+            </div>
+    </section>
     
-<script src="index.js"></script> 
 </body>
+<footer class="footer">
+    <p>Contactanos</p>
+    <a href=>""<img class="iconos" src="" alt=""></a>
+    <a href=""><img class="iconos" src="" alt=""></a>
+</footer>
+<script src="./index.js"></script>
 </html>
