--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="menu">
             <nav>
                 <ul class="navbar">
-                    <li><a href=>Cuenta</a></li> 
+                    <li><a href=>Inicio</a></li> 
                     <h2 class="titulo2">TITULO</h2>
                     <form action="">
                         <input type="text" placeholder="Buscar...">
@@ -72,8 +72,8 @@
     </div>
     
 <script src="index.js"></script>
-<script src="bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 <footer class="footer">
     <p>Contactanos</p>
